[gd_scene load_steps=21 format=3 uid="uid://cdormkxv8o726"]

[ext_resource type="Texture2D" uid="uid://epi4xeonmsci" path="res://src/assets/external/Monster Pack 21 (Bovine)/Spritesheets/Updated Boar/Boar_Idle.png" id="1_6hjq3"]
[ext_resource type="Script" path="res://src/scripts/Creature.gd" id="1_sjoox"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3e3jo"]
atlas = ExtResource("1_6hjq3")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jwc2"]
atlas = ExtResource("1_6hjq3")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3t7m"]
atlas = ExtResource("1_6hjq3")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwogt"]
atlas = ExtResource("1_6hjq3")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfg8t"]
atlas = ExtResource("1_6hjq3")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y2il"]
atlas = ExtResource("1_6hjq3")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yioio"]
atlas = ExtResource("1_6hjq3")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq6nk"]
atlas = ExtResource("1_6hjq3")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr25i"]
atlas = ExtResource("1_6hjq3")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lwr3"]
atlas = ExtResource("1_6hjq3")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu72n"]
atlas = ExtResource("1_6hjq3")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_shikl"]
atlas = ExtResource("1_6hjq3")
region = Rect2(384, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tucd"]
atlas = ExtResource("1_6hjq3")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_buf4p"]
atlas = ExtResource("1_6hjq3")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpd5u"]
atlas = ExtResource("1_6hjq3")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwquj"]
atlas = ExtResource("1_6hjq3")
region = Rect2(256, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_vcnol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e3jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jwc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3t7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfg8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y2il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yioio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq6nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr25i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lwr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu72n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shikl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tucd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buf4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpd5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwquj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gigq4"]

[node name="Creature" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_sjoox")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vcnol")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.333333, 4.33333)
shape = SubResource("CircleShape2D_gigq4")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
